# xcnft-pallet

./: Dockerfile  LICENSE  README.md  Readme.md
binaries/: README.md  config-both-docker.toml  config-both.toml  config-nfts.toml  config-uniques.toml  config.toml
src/: lib.rs  mock.rs  tests.rs
xcNFT_Pallet_nfts/: Cargo.toml  README.md
xcNFT_Pallet_nfts/src/: lib.rs
xcnft-pallet_nfts/: Cargo.toml  README.md
xcnft-pallet_nfts/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
xcnft-pallet_nfts/src/tests/: testpara.rs  testrelay.rs
xcnft-pallet_nfts/src/tests/testpara/xcm_config/: location_converter.rs  mod.rs  origin_converter.rs  reserve.rs  teleporter.rs  weigher.rs
xcnft-pallet_nfts/src/tests/testrelay/xcm_config/: asset_transactor.rs  barrier.rs  constants.rs
xcnft-pallet_uniques/: Cargo.toml  README.md
xcnft-pallet_uniques/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs  xmacros.rs
xcnft-pallet_uniques/src/tests/: testpara.rs  testrelay.rs
xcnft-pallet_uniques/src/tests/testpara/xcm_config/: asset_transactor.rs  barrier.rs  constants.rs  location_converter.rs  mod.rs
xcnft-pallet_uniques/src/tests/testrelay/xcm_config/: asset_transactor.rs  location_converter.rs  mod.rs  origin_converter.rs  teleporter.rs  weigher.rs
xnft/: Cargo.toml  README.md
xnft/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
