[package]
name = "pallet-parachain-xcnft-two"
authors = ["ParaSpell Research"]
description = "Pallet for NFT sharing using XCM."
version = "0.1.0"
license = "MIT"
homepage = "https://docs.paraspell.io"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }


# Substrate
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
enumflags2 = { workspace = true }

#XCM
xcm = { workspace = true}
xcm-builder = { workspace = true, default-features = false }

cumulus-primitives-core = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
parachain-info = { workspace = true }


sp-runtime = { workspace = true }
sp-std = {workspace = true}

pallet-uniques = { workspace = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0.210", default-features = false }

# Substrate
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

pallet-balances = { workspace = true, default-features = true }

# For unit tests
xcm-builder = { workspace = true, default-features = true }
xcm-simulator = { workspace = true, default-features = true }
xcm-executor = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }
polkadot-core-primitives = { workspace = true, default-features = true }
polkadot-runtime-parachains = { workspace = true, default-features = true }
polkadot-parachain-primitives = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-uniques/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
	"xcm-builder/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"parachain-info/std",
]
try-runtime = [
	"cumulus-pallet-xcm/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"parachain-info/try-runtime",
]
