[package]
name = "pallet-parachain-xnft"
authors = ["Dusan Morhac"]
description = "Pallet for NFT sharing using XCM."
version = "0.1.0"
license = "MIT"
homepage = "https://docs.paraspell.io"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true}
frame-support = { path = "../../../../substrate/frame/support", default-features = false}
frame-system = { path = "../../../../substrate/frame/system", default-features = false}

#XCM
xcm = { package = "staging-xcm", path = "../../../../polkadot/xcm", default-features = false}

cumulus-primitives-core = { path = "../../../../cumulus/primitives/core", default-features = false }
cumulus-pallet-xcm = { path = "../../../../cumulus/pallets/xcm", default-features = false }

sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false}
sp-std = { path = "../../../../substrate/primitives/std", default-features = false}

[dev-dependencies]
serde = { version = "1.0.188", default-features = false }

# Substrate
sp-core = { path = "../../../../substrate/primitives/core", default-features = false}
sp-io = { path = "../../../../substrate/primitives/io", default-features = false}
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false}


[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"sp-std/std",
	"xcm/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"cumulus-pallet-xcm/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
